# sus-agent

./: .gitignore  GEMINI.md  main.py  pyproject.toml
agents/: agent.py
chatbot/tests/: __init__.py
chatbot/tools/: __init__.py
config/: __init__.py
data/: .gitkeep
docs/: climate_crawler_spec.md
models/: __init__.py
scraper/config/: db.py
scraper/models/: document.py
scraper/scripts/: climate_crawler.py
scraper/tests/: test_crawler.py  test_db.py
scripts/: .gitkeep
