[project]
name = "sus-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk>=1.28.1",
    "httpx",
    "beautifulsoup4",
    "asyncpg>=0.31.0",
    "pdfplumber>=0.11.9",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
